--- a/index.html
+++ b/index.html
@@ -346,7 +346,21 @@
                 <div class="modal fade" id="statisticsModal" tabindex="-1" role="dialog" aria-labelledby="statisticsModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                        <div class="modal-header">
+                        <div class="modal-header d-flex justify-content-end">
+                          <svg xmlns="http://www.w3.org/2000/svg" 
+                               width="24" 
+                               height="24" 
+                               viewBox="0 0 24 24" 
+                               fill="none" 
+                               stroke="currentColor" 
+                               stroke-width="2" 
+                               stroke-linecap="round" 
+                               stroke-linejoin="round" 
+                               class="feather feather-x"
+                               id="dismissStats">
+                               <line x1="18" y1="6" x2="6" y2="18"></line>
+                               <line x1="6" y1="6" x2="18" y2="18"></line>
+                          </svg>
                         </div>
 
                         <div class="modal-body container">
