Testing animating pulling letters from local storage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+
     <body class="nightmode">
         <div id="container">
             <header class="d-flex justify-content-between" style="width: 100%">
-              <div class="ml-3 my-auto">
+              <div class="ml-3 my-auto" style="margin-left:1rem;">
                 <button id="nav-button" class="icon" aria-label="Navigation menu.">
                   <nav-icon>
                     <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -51,7 +51,7 @@ integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+
 
               <h1 class="title">Bimdle</h1>
 
-              <div class="menu-right my-auto mr-3">
+              <div class="menu-right my-auto mr-3" style="margin-right:1rem;">
                 <button id="statistics-button" class="icon" aria-label="Statistics" tabindex="-1">
                   <game-icon icon="statistics">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
@@ -453,7 +453,7 @@ integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+
                               <canvas id="statsChart" width="400" height="400"></canvas>
                               <div class="footer">
                                   <div class="countdown">
-                                      <h1>Next WORDLE</h1>
+                                      <h1>Next BIMDLE</h1>
                                       <div id="timer">
                                       <div class="statistic-container">
                                           <div class="statistic timer">
@@ -595,7 +595,7 @@ integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+
                               <canvas id="statsChart" width="400" height="400"></canvas>
                               <div class="footer">
                                   <div class="countdown">
-                                      <h1>Next WORDLE</h1>
+                                      <h1>Next BIMDLE</h1>
                                       <div id="timer">
                                       <div class="statistic-container">
                                           <div class="statistic timer">
