figured out how to update chart data

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+
                                       </button>
                                   </div>
                               </div>
-                              <div id="promo">
+                              <!-- <div id="promo">
                                   <div class="rule"></div>
                                   <a href="https://www.nytimes.com/puzzles/spelling-bee" class="promo-link">
                                       <div class="promo-icon"></div>
@@ -481,7 +481,7 @@ integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+
                                       </svg>
                                       </div>
                                   </a>
-                              </div>
+                              </div> -->
                           </div>
                       </div>
                     </div> 
